--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,18 +1,31 @@
-# Imagen base
+
+#  TrackingMed - Backend FastAPI (Producción)
+
+
+# Imagen base ligera
 FROM python:3.11-slim
 
-# Directorio de trabajo
+# Evitar buffering y generar logs en tiempo real
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+
+# Directorio de trabajo dentro del contenedor
 WORKDIR /app
 
-# Instalar dependencias
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+# Copiar dependencias (solo las necesarias para producción)
+COPY requirements.prod.txt .
 
-# Copiar el código fuente
+# Instalar dependencias sin caché
+RUN pip install --no-cache-dir -r requirements.prod.txt
+
+# Copiar el código fuente del backend
 COPY ./app ./app
+COPY ./realtime.py ./realtime.py
+COPY ./logging_config.py ./logging_config.py
+COPY ./database.py ./database.py
 
-# Exponer puerto
+# Exponer el puerto donde correrá Uvicorn
 EXPOSE 8000
 
-# Ejecutar FastAPI con Uvicorn
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
+# Comando de ejecución (ASGIApp = FastAPI + Socket.IO)
+CMD ["uvicorn", "app.main:asgi_app", "--host", "0.0.0.0", "--port", "8000"]
